--- a/FontPage/Sfpro.html
+++ b/FontPage/Sfpro.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="Navbar.css">
     <link rel="stylesheet" href="../Variable.css">
     <link rel="stylesheet" href="ConfigPage.css">
+    <link rel="stylesheet" href="Search.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -133,6 +134,24 @@
                 <div class="FontFileSize">
                     <a href="../Font/SFThonburi-Regular.ttf" download="">TTF 1.97MB</a>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Mode Toggles -->
+    <!-- Search -->
+
+    <div class="searchElement">
+        <div class="searchContent">
+            <div class="searchText">
+                <h1><ion-icon name="search-sharp"></ion-icon>Search</h1>
+            </div>
+            <!-- Search input -->
+            <div class="search">
+                <input type="text" class="searchTerm" placeholder="Type here to search">
+                <button type="submit" class="searchButton">
+                    <ion-icon name="search-sharp"></ion-icon>
+                </button>
             </div>
         </div>
     </div>
