--- a/MainPage.html
+++ b/MainPage.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="overlay.css">
     <link rel="stylesheet" href="query.css">
+    <link rel="stylesheet" href="Mainpage.css">
     <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Primary Meta Tags -->
@@ -66,14 +67,7 @@
                 <div class="settings-content">
                     <!-- Settings Content -->
                     <h1>Let's start with <img src="./Image/Peakk-Logo/Mask group.png" alt="">Settings</h1>
-                    <p>First one you're need to sign in or sign up if you dont have peakk store account because i'm need
-                        to know which product that you like or don't like if you not want to sign up or sign in you can
-                        continue as guest.</p>
-                    <div class="settingsContent-ButtonLoginCheck">
-                        <li><a href="./LoginStartUpPage/Login.html">Sign up</a></li>
-                        <li><a href="./LoginPage/LoginHTMLForSignIn/SignIn.html" id="OutlineTEXTSETTING">Sign in</a></li>
-                        <li><a onclick="ClOSESettingsCheck()" id="NotRecommendTEXTSETTING">Guest</a></li>
-                    </div>
+                    <p>This is peakk store that show all important menu that you're need</p>
 
                     <div class="PrefesthemeSett">
                         <h1>Select your prefes theme</h1>
@@ -332,7 +326,7 @@
                         <h1>Store</h1>
                     </div>
                     <div class="Headernav-text-logo-href-links-on-secound-navbar-before-mainNavbar-begin">
-                        <li><a href="./LoginStartUpPage/Login.html"><ion-icon name="download-outline"></ion-icon>Sign Up</a></li>
+                        <li><a href="#"><ion-icon name="download-outline"></ion-icon>Portfolio</a></li>
                     </div>
                 </div>
             </div>
@@ -341,7 +335,7 @@
                     <div class="header-lines-text">
                         <ion-icon name="documents-sharp"></ion-icon>
                         <h1>Welcome to Peakk store this page is a developer tool it make for you.</h1>
-                        <li><a href="./LoginStartUpPage/Login.html">Click me to login peakk store?</a></li>
+                        <li><a href="#"><ion-icon name="walk-sharp"></ion-icon>Click me to begin</a></li>
                     </div>
                 </div>
             </div>
@@ -378,11 +372,9 @@
                 <div class="sign-text">
                     <div class="signin-text-border">
                         <ion-icon name="id-card-sharp"></ion-icon>
-                        <h1>Let's know who come to my website.</h1>
+                        <h1>If you're want to exit my website need to sign out.</h1>
                         <div class="Flex-link-btn">
-                            <li><a href="./LoginPage/LoginHTMLForSignIn/SignIn.html"><ion-icon name="arrow-forward-sharp"></ion-icon>Sign In</a></li>
-                            <!-- Sign Up -->
-                            <li><a href="./LoginStartUpPage/Login.html">Sign Up</a></li>
+                            <li><a href="./LoginStartInPage/Login.html">Sign Out to Peakk store?</a></li>
                         </div>
                     </div>
                 </div>
