Peakk store technique ver 3.9

--- a/LoginPage/LoginHTMLForSignIn/password.html
+++ b/LoginPage/LoginHTMLForSignIn/password.html
@@ -36,7 +36,7 @@
                 <div class="Finish">
                     <div class="FinBtn">
                         <a href="NameImform.html" id="BackIdNotColor">Back</a>
-                        <a href="../../MainPage.html">Next</a>
+                        <a href="../../~.html">Next</a>
                     </div>
                 </div>
             </div>
