--- a/LoginStartUpPage/ConfirmPassCheck.html
+++ b/LoginStartUpPage/ConfirmPassCheck.html
@@ -35,7 +35,7 @@
                 <div class="Finish">
                     <div class="FinBtn">
                         <a href="Username.html" id="BackIdNotColor">Back</a>
-                        <a href="../MainPage.html">Next</a>
+                        <a href="../~.html">Next</a>
                     </div>
                 </div>
             </div>
