--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="overlay.css">
     <link rel="stylesheet" href="query.css">
+    <link rel="stylesheet" href="alert.css">
     <!-- Primary Meta Tags -->
     <title>Peakk - Peakk Store</title>
     <meta name="title" content="Peakk - Peakk Store" />
@@ -71,7 +72,8 @@
                         continue as guest.</p>
                     <div class="settingsContent-ButtonLoginCheck">
                         <li><a href="./LoginStartUpPage/Login.html">Sign up</a></li>
-                        <li><a href="./LoginPage/LoginHTMLForSignIn/SignIn.html" id="OutlineTEXTSETTING">Sign in</a></li>
+                        <li><a href="./LoginPage/LoginHTMLForSignIn/SignIn.html" id="OutlineTEXTSETTING">Sign in</a>
+                        </li>
                         <li><a onclick="ClOSESettingsCheck()" id="NotRecommendTEXTSETTING">Guest</a></li>
                     </div>
 
@@ -332,7 +334,8 @@
                         <h1>Store</h1>
                     </div>
                     <div class="Headernav-text-logo-href-links-on-secound-navbar-before-mainNavbar-begin">
-                        <li><a href="./LoginStartUpPage/Login.html"><ion-icon name="download-outline"></ion-icon>Sign Up</a></li>
+                        <li><a href="./LoginStartUpPage/Login.html"><ion-icon name="download-outline"></ion-icon>Sign
+                                Up</a></li>
                     </div>
                 </div>
             </div>
@@ -356,21 +359,21 @@
 
         </div>
 
-            <div class="wrapper">
-                <ul class="items">
-                  <li class="item" id="Bg1"></li>
-                  <li class="item" id="Bg2"></li>
-                  <li class="item" id="Bg3"></li>
-                  <li class="item" id="Bg4"></li>
-                  <li class="item" id="Bg5"></li>
-                  <li class="item" id="Bg6"></li>
-                  <li class="item" id="Bg7"></li>
-                  <li class="item" id="Bg8"></li>
-                  <li class="item" id="Bg9"></li>
-                  <li class="item" id="Bg10"></li>
-                  <li class="item" id="Bg11"></li>
-                </ul>
-                </div>
+        <div class="wrapper">
+            <ul class="items">
+                <li class="item" id="Bg1"></li>
+                <li class="item" id="Bg2"></li>
+                <li class="item" id="Bg3"></li>
+                <li class="item" id="Bg4"></li>
+                <li class="item" id="Bg5"></li>
+                <li class="item" id="Bg6"></li>
+                <li class="item" id="Bg7"></li>
+                <li class="item" id="Bg8"></li>
+                <li class="item" id="Bg9"></li>
+                <li class="item" id="Bg10"></li>
+                <li class="item" id="Bg11"></li>
+            </ul>
+        </div>
 
 
         <div class="SignIn">
@@ -380,11 +383,26 @@
                         <ion-icon name="id-card-sharp"></ion-icon>
                         <h1>Let's know who come to my website.</h1>
                         <div class="Flex-link-btn">
-                            <li><a href="./LoginPage/LoginHTMLForSignIn/SignIn.html"><ion-icon name="arrow-forward-sharp"></ion-icon>Sign In</a></li>
+                            <li><a href="./LoginPage/LoginHTMLForSignIn/SignIn.html"><ion-icon
+                                        name="arrow-forward-sharp"></ion-icon>Sign In</a></li>
                             <!-- Sign Up -->
                             <li><a href="./LoginStartUpPage/Login.html">Sign Up</a></li>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Alert for who not sign in -->
+
+        <div class="callout">
+            <div class="callmess">
+                <div class="calloutTitle">
+                    <h1>Alert</h1>
+                </div>
+                <div class="callText">
+                    <p>To see all content on peakk store you're need to sign up or sign in to see all content on peakk
+                        store</p>
                 </div>
             </div>
         </div>
