--- a/~.html
+++ b/~.html
@@ -22,7 +22,17 @@
     <title>Peakk - Peakk Store</title>
     <meta name="title" content="Peakk - Peakk Store" />
     <meta name="description" content="Welcome to Peakk store this page is a developer tool it make for you." />
-
+    <!-- Primary Meta Tags -->
+    <title>Peakk - Peakk Store</title>
+    <meta name="title" content="Peakk - Peakk Store" />
+    <meta name="description" content="Welcome to Peakk store this page is a developer tool it make for you." />
+    <meta name="title" content="Peakk - Peakk Store">
+    <meta name="description" content="Welcome to Peakk store this page is a developer tool it make for you.">
+    <meta name="keywords" content="Peakk Store for developer">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="developer">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://peakk2011.github.io/PeakkStore/" />
