Peakk store version 4.0

--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
         <div class="alertElement">
             <div class="Alert">
                 <div class="Alert-text">
-                    <h1>Peakk warned with good hope.</h1>
+                    <div class="AlertMess">
+                        <h1>Warning</h1>
+                        <a onclick="OpenWindow()" target="_blank"><ion-icon
+                            name="arrow-forward-outline"></ion-icon>Try mobile site method</a>
+                    </div>
                     <p>I Know you use tablet,ipad or rotate the phone to landscape please turn to vertical side please
                         and computer device to open my website i recommend to let you go to my
                         website that is support computer device</p>
@@ -280,7 +284,7 @@
                 </div>
                 <div class="lang-link">
                     <a href="#">English<ion-icon name="checkmark-sharp"></ion-icon></a>
-                    <a href="#">Thai</a>
+                    <a href="./Lang/Thai.html">Thai</a>
                 </div>
             </div>
         </div>
