--- a/~.html
+++ b/~.html
@@ -113,7 +113,11 @@
         <div class="alertElement">
             <div class="Alert">
                 <div class="Alert-text">
-                    <h1>Peakk warned with good hope.</h1>
+                    <div class="AlertMess">
+                        <h1>Warning</h1>
+                        <a onclick="OpenWindow()" target="_blank"><ion-icon
+                            name="arrow-forward-outline"></ion-icon>Try mobile site method</a>
+                    </div>
                     <p>I Know you use tablet,ipad or rotate the phone to landscape please turn to vertical side please
                         and computer device to open my website i recommend to let you go to my
                         website that is support computer device</p>
@@ -122,8 +126,8 @@
                 </div>
                 <div class="Alert-links">
                     <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Go to desktop site</a>
-                    <a href="https://www.google.com/" target="_blank"><ion-icon
-                            name="arrow-forward-outline"></ion-icon>Exit to mobile site</a>
+                    <a onclick="OpenWindow()" target="_blank"><ion-icon
+                            name="arrow-forward-outline"></ion-icon>Open mobile site</a>
                 </div>
             </div>
         </div>
