Peakk store update 4.1.1

--- a/Lang/LoginStartUpPage/ConfirmPassCheck.html
+++ b/Lang/LoginStartUpPage/ConfirmPassCheck.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password</title>
     <link rel="stylesheet" href="Login.css">
-    <link rel="stylesheet" href="../Font.css">
+    <link rel="stylesheet" href="../~Font.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -35,7 +35,7 @@
                 <div class="Finish">
                     <div class="FinBtn">
                         <a href="Username.html" id="BackIdNotColor">Back</a>
-                        <a href="../~!CheckDone.html">Next</a>
+                        <a href="../~.html">Next</a>
                     </div>
                 </div>
             </div>
