--- a/Lang/LoginStartUpPage/passwordCheck.html
+++ b/Lang/LoginStartUpPage/passwordCheck.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password</title>
     <link rel="stylesheet" href="Login.css">
-    <link rel="stylesheet" href="../Font.css">
+    <link rel="stylesheet" href="../~Font.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -16,11 +16,11 @@
         <div class="login">
             <div class="login-text">
                 <img src="../Image/Peakk-Logo/LightMode.png" alt="">
-                <h1>Confirm Password</h1>
-                <ion-icon name="chevron-forward-outline"></ion-icon>
+                <h1>Password</h1>
+                <ion-icon name="chevron-forward-outline" onclick="OpenAnotherLinksConPass()"></ion-icon>
             </div>
             <div class="loginSuggess">
-                <h1>Let's Confirm Password<br><h1 id="Highlight">Confirm a password</h1></h1>
+                <h1>Let's Create Strong Password<br><h1 id="Highlight">Create a password</h1></h1>
             </div>
             <hr>
             <div class="login-content">
@@ -35,7 +35,7 @@
                 <div class="Finish">
                     <div class="FinBtn">
                         <a href="Username.html" id="BackIdNotColor">Back</a>
-                        <a href="../~!CheckDone.html">Next</a>
+                        <a onclick="OpenAnotherLinksConPass()">Next</a>
                     </div>
                 </div>
             </div>
