--- a/Lang/LoginStartUpPage/Login.html
+++ b/Lang/LoginStartUpPage/Login.html
@@ -4,38 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password</title>
+    <title>Peakk store sign up</title>
     <link rel="stylesheet" href="Login.css">
-    <link rel="stylesheet" href="../Font.css">
+    <link rel="stylesheet" href="../~Font.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
+
     <div class="content" id="Content">
         <div class="login">
             <div class="login-text">
                 <img src="../Image/Peakk-Logo/LightMode.png" alt="">
-                <h1>Confirm Password</h1>
-                <ion-icon name="chevron-forward-outline"></ion-icon>
+                <h1>Sign up</h1>
+                <ion-icon name="chevron-forward-outline" onclick="OpenAnotherLinksUser()"></ion-icon>
             </div>
             <div class="loginSuggess">
-                <h1>Let's Confirm Password<br><h1 id="Highlight">Confirm a password</h1></h1>
+                <h1>Let me know who you are?<br><h1 id="Highlight">Let's Enter Email first</h1></h1>
             </div>
             <hr>
             <div class="login-content">
                 <div class="loginContentForm">
-                    <input type="name" placeholder="Don't be forget password" name="uname" required>
+                    <input type="email" placeholder="Example@gmail.com" name="uname" required>
                 </div>
                 <!-- Ask -->
                 <div class="askingSignIn">
+                    <a href="#">Do you want to login with Social Media?</a>
                     <a href="#">Have a account already?</a>
                 </div>
                 <!-- finish button -->
                 <div class="Finish">
                     <div class="FinBtn">
-                        <a href="Username.html" id="BackIdNotColor">Back</a>
-                        <a href="../~!CheckDone.html">Next</a>
+                        <a href="../index.html" id="BackIdNotColor">Back</a>
+                        <a onclick="OpenAnotherLinksUser()">Next</a>
                     </div>
                 </div>
             </div>
