--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="overlay.css">
     <link rel="stylesheet" href="query.css">
     <link rel="stylesheet" href="alert.css">
+    <link rel="stylesheet" href="~Deviceloader.css">
     <!-- Primary Meta Tags -->
     <title>Peakk - Peakk Store</title>
         <!-- Primary Meta Tags -->
@@ -113,8 +114,19 @@
     <!-- SecureWhenPCUseruse -->
 
     <div class="Background-Alert">
-
         <div class="alertElement">
+            <div class="device">
+                <div class="device__a">
+                    <div class="device__a-1"></div>
+                    <div class="device__a-2"></div>
+                </div>
+                <div class="device__b"></div>
+                <div class="device__c"></div>
+                <div class="device__d"></div>
+                <div class="device__e"></div>
+                <div class="device__f"></div>
+                <div class="device__g"></div>
+            </div>
             <div class="Alert">
                 <div class="Alert-text">
                     <div class="AlertMess">
