Peakk store update 4.2

--- a/AfterSignIn.html
+++ b/AfterSignIn.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="overlay.css">
     <link rel="stylesheet" href="query.css">
     <link rel="stylesheet" href="Mainpage.css">
+    <link rel="stylesheet" href="Deviceloader.css">
     <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Primary Meta Tags -->
@@ -111,6 +112,18 @@
     <div class="Background-Alert">
 
         <div class="alertElement">
+            <div class="device">
+                <div class="device__a">
+                    <div class="device__a-1"></div>
+                    <div class="device__a-2"></div>
+                </div>
+                <div class="device__b"></div>
+                <div class="device__c"></div>
+                <div class="device__d"></div>
+                <div class="device__e"></div>
+                <div class="device__f"></div>
+                <div class="device__g"></div>
+            </div>
             <div class="Alert">
                 <div class="Alert-text">
                     <div class="AlertMess">
