--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="overlay.css">
     <link rel="stylesheet" href="query.css">
     <link rel="stylesheet" href="alert.css">
-    <link rel="stylesheet" href="~Deviceloader.css">
+    <link rel="stylesheet" href="Deviceloader.css">
     <!-- Primary Meta Tags -->
     <title>Peakk - Peakk Store</title>
         <!-- Primary Meta Tags -->
@@ -277,11 +277,7 @@
                 </div>
                 <hr>
                 <ul>
-                    <li><a href="#"><ion-icon name="terminal-sharp"></ion-icon>JavaScript</a></li>
-                    <li><a href="#"><ion-icon name="browsers-sharp"></ion-icon>HTML</a></li>
-                    <li><a href="#"><ion-icon name="logo-css3"></ion-icon>CSS</a></li>
                     <li><a onclick="TypefaceSetupCheck()"><ion-icon name="text-sharp"></ion-icon>TypeFace</a></li>
-                    <li><a href="#"><ion-icon name="grid"></ion-icon>Miscellaneous</a></li>
                 </ul>
             </div>
         </div>
